--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,15 +41,19 @@ dependencies:
   cloud_firestore: ^4.7.1
   intl: ^0.18.1
   firebase_auth: ^4.6.1
+  smooth_page_indicator: ^1.1.0
   simple_animations: ^4.2.0
   shared_preferences: ^2.1.1
   image_picker: ^0.8.7+5
+  flutter_native_splash: ^2.2.8
   path_provider: ^2.0.15
   animated_theme_switcher: ^2.0.8
   email_validator: ^2.1.17
   firebase_core: ^2.13.0
   url_launcher: ^6.1.11
   firebase_crashlytics: ^3.3.1
+  loop_page_view: ^1.2.2
+  lottie: ^2.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -75,7 +79,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/lotties/
+    - assets/stet.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
