--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,13 @@ dependencies:
   provider: ^6.0.5
   cloud_firestore: ^4.7.1
   intl: ^0.18.1
+  # dropdown_button2: ^2.3.4
   firebase_auth: ^4.6.1
   ionicons: ^0.2.2
   smooth_page_indicator: ^1.1.0
   simple_animations: ^4.2.0
   shared_preferences: ^2.1.1
-  image_picker: ^0.8.7+5
+  image_picker: ^1.0.1
   flutter_native_splash: ^2.2.8
   roundcheckbox: ^2.0.5
   path_provider: ^2.0.15
@@ -57,6 +58,17 @@ dependencies:
   firebase_crashlytics: ^3.3.1
   loop_page_view: ^1.2.2
   lottie: ^2.3.2
+  firebase_storage: ^11.2.4
+  agora_rtc_engine: ^6.2.1
+  permission_handler: ^10.4.2
+  pinput: ^2.2.31
+  localization: ^2.1.0
+  flutter_dotenv: ^5.1.0
+  firebase_messaging: ^14.6.4
+  adaptive_theme: ^3.2.1
+  dropdown_button2: ^2.1.4
+  flutter_switch: ^0.3.2
+  # agora_uikit: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
