--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,6 @@ dependencies:
   adaptive_theme: ^3.2.1
   dropdown_button2: ^2.1.4
   flutter_switch: ^0.3.2
-  # agora_uikit: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -94,6 +93,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
     - assets/lotties/
     - assets/stet.png
 
